@@ -390,7 +390,8 @@ void camera_specific_init() {
     combobox_append(  GTK_COMBO_BOX(GW("jpeg_quality_combo")), str_jpegstars, num_stars );
 
     // jpeg image tone
-    int max_supported_image_tone = pslr_get_model_max_supported_image_tone( camhandle );
+    int max_supported_image_tone = pslr_get_model_max_supported_image_tone( camhandle )+1;
+    DPRINT("max image tone:%d", max_supported_image_tone);
     GtkComboBox *pw = (GtkComboBox*)GTK_WIDGET (gtk_builder_get_object (xml, "jpeg_image_tone_combo"));
         
     char **imagetones = malloc( max_supported_image_tone * sizeof(char*) );
