@@ -1,6 +1,8 @@
 version 0.82.03
 	More debug messages
 	jpeg contrast/hue/sharpness/saturation GUI bugfix
+	Image tone bugfix (thx Mike Protts)
+	Disable muted jpeg image tone for bugfix because it's not working correctly
 
 version 0.82.02 ( 2015-06-28 )
 	--pentax_debug_mode ( thx Samo Penic )
